--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   onboarding: ^4.0.2
   lottie: ^3.1.2
   flutter_svg: ^2.0.10+1
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
